i like to move it move it

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Fer2G</title>
+    </head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages. Yes, I literally copy-pasted this</p>
