--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</h2>
 				<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
 					<div class="accordion-body">
-						This is just a filler
+						<a href="/Juan.jpg">Juan</a>
 					</div>
 				</div>
 			</div>
