Implemented older project

--- a/University_Projects/project_index.html
+++ b/University_Projects/project_index.html
@@ -48,7 +48,7 @@
 					<div class="accordion-body">
             <ul class="list-group mt-4">
               <li class="list-group-item">
-                <a href="#">Proyecto 1 (sin código por ahora)</a>
+                <a href=".\Graficación\Frases\page\project.html">Proyecto 1: Frases con voz</a>
               </li>
               <li class="list-group-item">
                 <a href=".\Graficación\Sistema_Solar\page\project.html">Proyecto 2: Sistema Solar</a>
