--- a/University_Projects/project_index.html
+++ b/University_Projects/project_index.html
@@ -53,6 +53,9 @@
               <li class="list-group-item">
                 <a href=".\Graficación\Sistema_Solar\page\project.html">Proyecto 2: Sistema Solar</a>
               </li>
+              <li class="list-group-item">
+                <a href=".\Graficación\Modelos_Audio\page\project.html">Proyecto 3: Modelos 3D y Audio</a>
+              </li>
               <!-- <li class="list-group-item">
                 <a href="#">Project 3</a>
               </li>
